fix for using ndk r10e and gnustl.

--- a/config/android/config.gni
+++ b/config/android/config.gni
@@ -25,7 +25,7 @@ if (is_android) {
     enable_chrome_android_internal = has_chrome_android_internal
 
     # Android API level for 32 bits platforms
-    android32_ndk_api_level = 16
+    android32_ndk_api_level = 14
 
     # Android API level for 64 bits platforms
     android64_ndk_api_level = 21
@@ -58,8 +58,8 @@ if (is_android) {
 
   if (!defined(default_android_ndk_root)) {
     default_android_ndk_root = "//third_party/android_ndk"
-    default_android_ndk_version = "r16"
-    default_android_ndk_major_version = 16
+    default_android_ndk_version = "r10e"
+    default_android_ndk_major_version = 10
   } else {
     assert(defined(default_android_ndk_version))
     assert(defined(default_android_ndk_major_version))
@@ -281,7 +281,7 @@ if (is_android) {
   # Toolchain root directory for each build. The actual binaries are inside
   # a "bin" directory inside of these.
   _android_toolchain_version = "4.9"
-  _android_toolchain_detailed_version = "4.9.x"
+  _android_toolchain_detailed_version = "4.9"
   x86_android_toolchain_root = "$android_ndk_root/toolchains/x86-${_android_toolchain_version}/prebuilt/${android_host_os}-${android_host_arch}"
   arm_android_toolchain_root = "$android_ndk_root/toolchains/arm-linux-androideabi-${_android_toolchain_version}/prebuilt/${android_host_os}-${android_host_arch}"
   mips_android_toolchain_root = "$android_ndk_root/toolchains/mipsel-linux-android-${_android_toolchain_version}/prebuilt/${android_host_os}-${android_host_arch}"
@@ -334,7 +334,7 @@ if (is_android) {
 
   # Toolchain stuff ------------------------------------------------------------
 
-  android_libcpp_root = "$android_ndk_root/sources/cxx-stl/llvm-libc++"
+  android_libcpp_root = "$android_ndk_root/sources/cxx-stl/gnu-libstdc++/4.9"
 
   if (android_libcpp_lib_dir == "") {
     android_libcpp_lib_dir = "${android_libcpp_root}/libs/${android_app_abi}"
