--- a/config/android/BUILD.gn
+++ b/config/android/BUILD.gn
@@ -40,7 +40,7 @@ config("compiler") {
     # Don't allow visible symbols from libgcc or libc++ to be
     # re-exported.
     "-Wl,--exclude-libs=libgcc.a",
-    "-Wl,--exclude-libs=libc++_static.a",
+    "-Wl,--exclude-libs=libgnustl_static.a",
 
     # Don't allow visible symbols from libraries that contain
     # assembly code with symbols that aren't hidden properly.
@@ -75,10 +75,15 @@ config("compiler") {
     assert(false, "Architecture not supported")
   }
   cflags += [
-    "--target=$abi_target",
+#cjh    "--target=$abi_target",
+#cjh    "-isystem" +
+#        rebase_path("$android_ndk_root/sysroot/usr/include/$abi_target",
+#                    root_build_dir),
+
     "-isystem" +
-        rebase_path("$android_ndk_root/sysroot/usr/include/$abi_target",
+        rebase_path("$android_ndk_root/platforms/android-$compile_api_level/arch-$current_cpu/usr/include",
                     root_build_dir),
+
     "-D__ANDROID_API__=$compile_api_level",
 
     # Temporary workaround for third party dependencies requiring this to be
@@ -117,21 +122,21 @@ config("runtime_library") {
     libcxx_include_path =
         rebase_path("$android_libcpp_root/include", root_build_dir)
     libcxxabi_include_path =
-        rebase_path("$android_ndk_root/sources/cxx-stl/llvm-libc++abi/include",
+        rebase_path("$android_ndk_root/sources/cxx-stl/gnu-libstdc++/4.9/libs/${android_app_abi}/include",
                     root_build_dir)
   } else {
     libcxx_include_path =
-        rebase_path("$android_libcpp_root/libcxx/include", root_build_dir)
+        rebase_path("$android_libcpp_root/include", root_build_dir)
     libcxxabi_include_path = rebase_path(
-            "$android_ndk_root/sources/cxx-stl/llvm-libc++abi/libcxxabi/include",
+            "$android_ndk_root/sources/cxx-stl/gnu-libstdc++/4.9/libs/${android_app_abi}/include",
             root_build_dir)
   }
   cflags_cc += [
     "-isystem" + libcxx_include_path,
     "-isystem" + libcxxabi_include_path,
-    "-isystem" +
-        rebase_path("$android_ndk_root/sources/android/support/include",
-                    root_build_dir),
+#    "-isystem" +
+#        rebase_path("$android_ndk_root/sources/android/support/include",
+#                    root_build_dir),
   ]
 
   defines = [
@@ -145,18 +150,18 @@ config("runtime_library") {
   # ASan needs to dynamically link to libc++ even in static builds so
   # that it can interpose operator new.
   if (is_component_build || is_asan) {
-    libs = [ "c++_shared" ]
+    libs = [ "gnustl_shared" ]
   } else {
-    libs = [ "c++_static" ]
+    libs = [ "gnustl_static" ]
   }
-  libs += [
-    "c++abi",
-    "android_support",
-  ]
+#  libs += [
+#    "c++abi",
+#    "android_support",
+#  ]
 
   # arm builds of libc++ starting in NDK r12 depend on unwind.
   if (current_cpu == "arm") {
-    libs += [ "unwind" ]
+#    libs += [ "unwind" ]
   }
 
   # Manually link the libgcc.a that the cross compiler uses. This is
