--- a/toolchain/android/BUILD.gn
+++ b/toolchain/android/BUILD.gn
@@ -44,10 +44,24 @@ template("android_clang_toolchain") {
     # The tools should be run relative to the build dir.
     _tool_prefix = rebase_path("$_android_tool_prefix", root_build_dir)
 
-    _prefix = rebase_path("$clang_base_path/bin", root_build_dir)
-    cc = "$_prefix/clang"
-    cxx = "$_prefix/clang++"
-    ar = "$_prefix/llvm-ar"
+    # Use the clang specified by the toolchain if there is one. Otherwise fall
+    # back to the global flag.
+    is_clang = false
+#    if (defined(toolchain_args.is_clang)) {
+#      toolchain_uses_clang = toolchain_args.is_clang
+#    } else {
+      toolchain_uses_clang = is_clang
+#    }
+
+    if (toolchain_uses_clang) {
+      _prefix = rebase_path("$clang_base_path/bin", root_build_dir)
+      cc = "$_prefix/clang"
+      cxx = "$_prefix/clang++"
+    } else {
+      cc = "${_tool_prefix}gcc"
+      cxx = "${_tool_prefix}g++"
+    }
+    ar = _tool_prefix + "ar"
     ld = cxx
     readelf = _tool_prefix + "readelf"
     nm = _tool_prefix + "nm"
