--- a/toolchain/android/BUILD.gn
+++ b/toolchain/android/BUILD.gn
@@ -43,11 +43,12 @@ template("android_gcc_toolchain") {
 
     # Use the clang specified by the toolchain if there is one. Otherwise fall
     # back to the global flag.
-    if (defined(toolchain_args.is_clang)) {
-      toolchain_uses_clang = toolchain_args.is_clang
-    } else {
+    is_clang = false
+#    if (defined(toolchain_args.is_clang)) {
+#      toolchain_uses_clang = toolchain_args.is_clang
+#    } else {
       toolchain_uses_clang = is_clang
-    }
+#    }
 
     if (toolchain_uses_clang) {
       _prefix = rebase_path("$clang_base_path/bin", root_build_dir)
